I forgot what changed

--- a/common/src/main/resources/assets/ifly/lang/en_us.json
+++ b/common/src/main/resources/assets/ifly/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "itemGroup.ifly.creative_tab": "iFly"
+  "itemGroup.ifly.creative_tab": "iFly",
+  "trim_pattern.ifly.fly_trim": "iFly Template"
 }
