Updated lang to match vanilla

--- a/common/src/main/resources/assets/ifly/lang/en_us.json
+++ b/common/src/main/resources/assets/ifly/lang/en_us.json
@@ -1,4 +1,4 @@
 {
   "itemGroup.ifly.creative_tab": "iFly",
-  "trim_pattern.ifly.fly_trim": "iFly Template"
+  "trim_pattern.ifly.fly_trim": "Flight Armor Trim"
 }
