--- a/common/src/main/resources/assets/ifly/lang/en_us.json
+++ b/common/src/main/resources/assets/ifly/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "itemGroup.ifly.creative_tab": "IFly",
   "item.ifly.ascension_shard": "Ascension Shard",
   "block.ifly.ascension_shard": "Ascension Shard"
 }
